# SummerScout25

./: .dockerignore  .env.example  .gitignore  ADD_REMAINING.md  ANALYSIS_SUMMARY.md  CHANGES_SUMMARY.md  CLI_GUIDE.md  CONTRIBUTING.md  DASHBOARD_READY.md  Dockerfile  FIXES_APPLIED.md  FRONTEND_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INDIA_INTERNSHIP_TRACKER.md  Makefile  NEW_COMPANIES_ADDED.md  ON_DEMAND_USAGE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUN_OPTIONS.md  SCHEDULE_CONFIG.md  SECURITY.md  SIMPLE_INSTALL.txt  START_HERE.md  UPGRADES.md  WATCH_SCRAPER.md  add_companies.py  add_mega_batch.py  add_new_companies.py  alembic.ini  append_all_companies.sh  celeryconfig.py  check_scrape_progress.sh  cleanup_docs.sh  cleanup_jobs.py  cleanup_project.sh  complete_watchlist.txt  (+32 more)
alembic/: env.py
backup_20251101_154734/: DEMO_PROGRESS.txt  FILTER_FIXES_SUMMARY.md  PROGRESS_TRACKER.md  PROJECT_STATUS.md  analyze_failures.py  fix_scrapers.py  job_tracker.sh  link_validation_results.yaml  run_dry_run.sh  run_scraper.sh  show_jobs.sh  start_dashboard.sh  start_scheduler.sh
config/: additional_companies.yaml  filters.yaml  watchlist.yaml  watchlist_backup.yaml  watchlist_backup_20251101_110330.yaml  watchlist_backup_2026.yaml  watchlist_backup_v2_20251101_110614.yaml  watchlist_full.yaml  watchlist_full_257.yaml  watchlist_optimized.yaml  watchlist_with_indeed_example.yaml
exports/: jobs_by_category_data_science.txt  jobs_by_category_ml_ai.txt  jobs_by_category_uncategorized.txt  jobs_export.csv  jobs_formatted.txt
(+61 files in other folders)
